--- a/index.html
+++ b/index.html
@@ -15,45 +15,46 @@
 
 <body>
   <div class="bg">
+    <div class="container">
+      <!--Side bar-->
+      <nav role='navigation'>
+        <div id="menuToggle">
 
+          <input type="checkbox" />
+          <span></span>
+          <span></span>
+          <span></span>
+          <ul id="menu">
+            <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
+            <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
+            <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
+            <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
+            <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
+            <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
+            <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
+            <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
+            <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
+            <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
+            <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
+            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות </a>
+            <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
+            <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
+            <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
+            <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
+            <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
+            <a href="twoDimLoops.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
+            <a href="" class="w3-bar-item w3-button">מיונים הסבר כללי</a>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <!--End of Side bar-->
 
-<!--Side bar-->
-<nav role='navigation'>
-  <div id="menuToggle">
-    <input type="checkbox" />   
-    <span></span>
-    <span></span>
-    <span></span>
-    <ul id="menu">
-      <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
-      <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
-      <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
-      <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
-      <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
-      <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
-      <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
-      <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
-      <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
-      <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
-      <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-      <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות </a>
-      <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
-      <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
-      <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
-      <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
-      <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
-      <a href="twoDimLoops.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-      <a href="" class="w3-bar-item w3-button">מיונים הסבר כללי</a>
-    </ul>
-  </div>
-</nav>
-<!--End of Side bar-->
-    
 
     <h1 class="top-left">Learning C</h1>
 
     <p class="top-right">
-      
+
       היי, ברוכים הבאים לאתר שלנו Learning C.
       <br>
       אנו שלושה סטודנטים מהמכון הטכנולוגי בחולון שמתחילים את שנתם השנייה.
@@ -61,8 +62,10 @@
       בתור סטודנטים שעברו את שנה א' אנו יודעים כמה מייגעת וקשה היא, כמה מעט חומר בעברית יש
       על שפת סי ואם כבר יש חומר על השפה הזו, הוא בד"כ ישן , לא מעודכן , לא מובן ובעיקר לא נוח לקריאה.
       <br>
-      אז בתור פרויקט לקחנו על עצמנו הכנת אתר זה שמטרתו לעזור לסטודנטים אחרים (ובעצם לכל מי שרוצה ללמוד את הבסיס של שפת סי) ללמוד.
-      חשוב לנו מאוד לציין, שמדובר בשפה שלא נחשבת לקלה בתור שפה ראשונה, אבל היתרונות שלה על שפת אחרות הוא בכך שכאשר עבודה נעשית בשפת סי היא נעשית ברמה מאוד נמוכה מבחינת המעבד (low level) ובשל כך אנו לומדים קצת יותר טוב מה קורה בתחתית.
+      אז בתור פרויקט לקחנו על עצמנו הכנת אתר זה שמטרתו לעזור לסטודנטים אחרים (ובעצם לכל מי שרוצה ללמוד את הבסיס של שפת
+      סי) ללמוד.
+      חשוב לנו מאוד לציין, שמדובר בשפה שלא נחשבת לקלה בתור שפה ראשונה, אבל היתרונות שלה על שפת אחרות הוא בכך שכאשר עבודה
+      נעשית בשפת סי היא נעשית ברמה מאוד נמוכה מבחינת המעבד (low level) ובשל כך אנו לומדים קצת יותר טוב מה קורה בתחתית.
       <br>
       <br>
       קצת עלינו:
@@ -73,7 +76,7 @@
       <br>
       אנזור טוריקאשווילי – מפתח ווב, בעל ציון סופי 89 בקורס "מבוא למדעי המחשב".
       <br>
-      קישורים:   
+      קישורים:
 
   </div>
 
