--- a/firstProgram.html
+++ b/firstProgram.html
@@ -66,10 +66,12 @@
 }
       </code></pre>
   </figure>
+
+  <h1 class="top-right-head">התוכנית הראשונה שלנו</h1>
+
   <p class="top-right">
 
     בתוכנית זו נלמד איך מדפיסים למסך hello world:
-    <br>
     <br>
     include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית)
     <br>
