--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
     <h1 class="top-left">Learning C</h1>
 
+    <h2 class="top-right-head">מי אנחנו?</h2>
+
     <p class="top-right">
 
       היי, ברוכים הבאים לאתר שלנו Learning C.
