--- a/mathOperator.html
+++ b/mathOperator.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="bg">
+  <div class="bg-oneAndHalf">
 
     <div class="container">
       <nav role='navigation'>
@@ -59,6 +59,59 @@
   <h1 class="top-left">Learning C</h1>
 
   </div>
+
+
+  <h2 class="top-right-head">אופרטורים חשבוניים</h2>
+
+  <p class="top-right">
+
+    + פעולת חיבור
+    <br>
+    - פעולת חיסור
+    <br>
+    / פעולה חילוק
+    <br>
+    * פעולת כפל
+    <br>
+    % מודולו - אופרטור שבעצם אומר לנו מהי שארית החלוקה של מספר במספר אחר.
+    <br>
+    () סוגריים
+    <br>
+    = השמה - זוהי בעצם פעולה שאומרת בתכנות שמה שנמצא בצד שמאל מקבל את הערך שנמצא בצד ימין.
+    <br>
+    דוגמה למודולו:
+    <br>
+    7%3 = 1
+    <br>
+    כי:
+    <br>
+    7/3 = 2.3333
+    <br>
+    ושארית החלוקה שלנו היא בעצם 1 מתוך 3 (שליש) -> 1
+    <br>
+    מהי שארית החלוקה של 12 ב4 ?
+    <br>
+    באותה הדרך אנו נעשה קודם כל :
+    <br>
+    12/4 = 3 .0
+    <br>
+    ניקח את ה0/4 שיש לנו ובעצם שארית החלוקה שלנו היא 0.
+    <br>
+    דוגמה להשמה:
+    <br>
+    <!--CODE-->
+    int x = 5;
+    x = 7;
+    <!--END CODE-->
+    <br>
+    בעצם מה שקורה פה זה שאנחנו מצהירים על משתנה בשם x ואנחנו משווים אותו ל5, כלומר עשינו פה השמה.
+  
+    <br>
+    במקרה הזה, לקחנו את x (שכבר מוכר לנו כ-int), וביצענו השמה אצלו של הערך 7.
+
+
+
+  </p>
 
 
 </body>
