--- a/variables.html
+++ b/variables.html
@@ -51,6 +51,11 @@
 
     </div>
 
+    <h2 class="top-right-head">משתנים</h2>
+
+    <p class=top-right>
+      כרגע, אין מה להציג
+    </p>
 
   </body>
   
