--- a/casting.html
+++ b/casting.html
@@ -53,6 +53,57 @@
 
   </div>
 
+  <h2 class="top-right-head">המרה - קסטינג</h2>
+
+  <p class=top-right>
+
+    קסטינג = המרה בין משתנה למשתנה.
+    <br>
+    לפעמים אנחנו נרשום במשתנה מסוים ונרצה להמיר אותו למשתנה אחר בהמשך הדרך (או למשל לעבוד במשתנה מסוים ולהדפיס את התוצאה
+    במשתנה אחר).
+    <br>
+    לדוגמה:
+    <br>
+    <!--CODE-->
+    double num = 0;
+
+    printf("please enter a number/n");
+
+    scanf_s("%lf",&num);
+
+    printf("your number without decimal point is: %d", (int)num);
+    <!--END CODE-->
+    <br>
+    מה שעשינו פה:
+    <br>
+    ביקשנו מהמשתמש מספר ושמרנו אותו בתוך משתנה num מסוג double.
+    <br>
+    לאחר מכן הדפסנו את המספר שלו ללא הנקודה העשרונית בעזרת שימוש בcasting.
+    <br>
+    <br>
+    casting עובד בצורה הבאה:
+    <br>
+    לקחנו את המשתנה שלנו num שהוא מסוג double ובחרנו להציג אותו / להמיר אותו זמנית לint כדי להציג את המספר ללא הנקודה
+    העשרונית.
+    <br>
+    ניתן לבצע המרה בצורה רגעית כמו שביצענו עכשיו כלומר, num אינו מושפע מהתהליך אלא רק מודפס בצורת int ולאחר מכן חוזר
+    לעצמו.
+    <br>
+    ניתן גם לבצע המרה באופן קבוע למשל:
+    <br>
+    <!--CODE-->
+    double num = 8.325;
+
+    int new_num = (int)num;
+
+    <!--END CODE-->
+    <br>
+    במקרה הזה בעצם ביצענו המרה קבועה מdouble לint ושמרנו אותו בnew_num.
+
+
+
+
+  </p>
 
 </body>
 
