--- a/dinArrays.html
+++ b/dinArrays.html
@@ -49,6 +49,16 @@
   </div>
   <h1 class="top-left">Learning C</h1>
   </div>
+
+  <h2 class="top-right-head">מערכים דו מימדיים</h2>
+
+  <p class="top-right">
+
+    כרגע, אין מה להציג
+
+  </p>
+
+
 </body>
 
 </html>
