--- a/printAndScan.html
+++ b/printAndScan.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="bg-oneAndHalf">
+  <div class="bg-two">
 
     <div class="container">
       <nav role='navigation'>
