--- a/recursion.html
+++ b/recursion.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="bg">
+  <div class="bg-two">
 
     <div class="container">
       <nav role='navigation'>
@@ -56,6 +56,84 @@
 
   </div>
 
+  <h2 class="top-right-head">רקורסיה</h2>
+
+  <p class="top-right">
+
+    רקורסיה היא שיטה לפתרון בעיות גדולות באמצעות פתרון של בעיות קטנות יותר.
+    <br>
+    ננסה להבין את ההסבר על הרקורסיה באמצעות דוגמא:
+    <br>
+    נניח שאנו רוצים לבדוק כמה פעמים המספר 32 מתחלק ב 2.
+    <br>
+    אנו נניח שאנחנו לא יודעים כמה פעמים 32 מתחלק ב 2 ואז ננסה לפתור את הבעיה הגדולה הזאת עם בעיה קטנה יותר.
+    <br>
+     כלומר, אם
+    נחלק את 32 ב-2 פעם אחת נקבל 16.
+    <br>
+    כעת, הבעיה שלנו היא לא כמה פעמים 32 מתחלק ב 2 אלא כמה פעמים 16 מתחלק ב-2.
+    <br>
+    כי אם אנו נדע כמה פעמים 16 מתחלק ב2 אז נדע כמה פעמים 32 מתחלק ב2.
+    <br>
+    כי 16*2=32.
+    <br>
+    בשלב זה, אנו נניח שאני לא יודעים כמה פעמים 16 מתחלק ב2 אז אנו נחלק ב2 פעם נוספת ונקבל 8.
+    <br>
+    ואם נחלק את 8 ב-2 פעם נוספת נקבל 4. אחר כך נקבל 2 ואז 1.
+    <br>
+    כעת, הגענו ל 1 -> אנו לא יכולים לחלק ב2 יותר ולכן נספור כמה פעמים ביצענו את החילוק.
+    <br>
+    1->2->4->8->16->32 כלומר, ביצענו את החילוק 5 פעמים ולכן 32 מתחלק ב-2 חמש פעמים.
+    <br>
+    איך ממשים דבר כזה?
+    <br>
+    אז לפני שנקפוץ לפתרון אני רוצה שנחשוב על כמה דברים:
+    <br>
+    1. מהו תנאי העצירה?
+    <br>
+    2. מה השינוי שאנו עושים בכל פעם כדי לצמצם את גודל הבעיה?
+    <br>
+    3. איך אנו קורא לפונקציה שוב?
+    <br>
+    <br>
+    1* אם אתם נתקעים על השאלה "מהו תנאי העצירה?" נסו לחשוב "מתי אני מפסיק לעשות את הפעולה הזאת?" או "מה הבעיה הקטנה
+    ביותר שמסתתרת מאחורי השאלה?"
+    <br>
+    2* אם אתם נתקעים בשאלה השנייה תנסו לחשוב "מה שונה בין כל שלב ושלב?"
+    <br>
+    אחרי שחשבנו נסתכל על השאלה וננסה להבין מה אנחנו אמורים לקבל חזרה? -> מה הפונקציה מחזירה?
+    האם זה מספר? תו? או בכלל כלום?
+    <br>
+    <br>
+    בשאלה שלנו:
+    <br>
+    1. תנאי העצירה הוא כשהמספר הוא 1, כלומר אי אפשר לחלק ב2 יותר.
+    <br>
+    2. השינוי הוא חילוק ב2 פעם אחת בכל פעם.
+    <br>
+    3. אנו קוראים לפונקציה שוב בכל פעם רק עם תוספת של הצלחה אחת.
+    <br>
+    <br>
+    כעת, לאחר שאנחנו יודעים את כל השלבים נסתכל על המבנה הבא:
+
+    <!--CODE-->
+
+    
+    <!--END CODE-->
+
+    <br>
+    <br>
+    מספר הערות:
+    <br>
+    אחרי שעלינו על פתרון מסוים אנחנו צריכים לבדוק אם הפתרון שלנו עונה על תנאי השאלה.
+    <br>
+    כלומר, האם הקלט מותאם למה שהתבקש? האם הפלט של התוכנית הוא כמו הפלט שרצינו שיהיה?
+    <br>
+    הדרך הכי טובה לבדוק את זה היא לקחת מספר קטן שאנחנו יודעים את התוצאה שאמורה להיות או את הדוגמא שאנחנו מקבלים,
+    <br> 
+    להריץ אותה על הקוד שלנו ולראות מה יהיה הפלט.
+    <br>
+  </p>
 
 </body>
 
