--- a/oneDimLoops.html
+++ b/oneDimLoops.html
@@ -59,7 +59,41 @@
   <h2 class="top-right-head">לולאות</h2>
 
   <p class=top-right>
-    כרגע, אין מה להציג
+
+
+    לולאות
+    תפקיד הלולאה היא לקצר את הקוד. כלומר במקום שנרשום 5 פעמים את אותה השורה אז אנחנו יכולים לרשום קוד אחר אשר יעזור לנו לקצר אותו. כלומר, במקום לרשום את הקוד הבא:
+    <!--CODE 1
+    printf("1");
+    printf("2");
+    printf("3");
+    printf("4");
+    printf("5");
+    ENDCODE-->
+    <br>
+    נוכל לרשום:
+    <!--CODE 2
+    int I;
+    for(i=0;i<5;i++){
+      printf("%d",i);
+    }
+    END CODE-->
+    <br>
+
+  אם נסתכל על שורת הקוד ה2 נוכל לראות שלושה דברים:
+  <br>
+  1.	תנאי התחלה (i=0) -> מאיפה להתחיל את הספירה.
+  <br>
+  2.	התנאי שדואג לכך שכל עוד הוא נכון נמשיך להיכנס ללולאה (i&lt;5).
+  <br>
+  3.	השינוי בין כל ריצה לריצה ( (i++ -> מגדיל ב1 את הערך של i.
+  <br>
+  אנו נוכל להשתמש בלולאה בכל מקום שנרצה בקוד כל עוד יש חוקיות מסוימת בקוד, כלומר, בדוגמא שלעיל החוקיות היא הדפסה של מספרים עוקבים.
+  <br>
+  •	ניתן לרשום יותר מתנאי אחד בכל אחד מחלקי הלולאה (1,2,3) אשר אותם נפריד בפסיקים.
+
+
+
   </p>
 
 
