--- a/twoDimLoops.html
+++ b/twoDimLoops.html
@@ -58,10 +58,57 @@
   <h2 class="top-right-head">לולאות דו מימדיות</h2>
 
   <p class=top-right>
-    כרגע, אין מה להציג
+    לולאות מקוננות (לולאה בתוך לולאה)
+    <br>
+    כפי שלמדנו בנושא "לולאות" , לולאה הינה קטע קוד שרץ מספר פעמים לפי תנאי מסוים (למשל לולאות WHILE , שרצה עד התנאי שאנו
+    ניתן לה).
+    <br>
+    קיימת הרחבה לנושא הלולאות והיא נפוצה מאוד בעולם התכנות.
+    לולאה דו מימדית הינה לולאה בעלת שני מימדים והיא מורכבת מלולאה שמריצה בתוכה לולאה אחרת.
+    אחת מהמטרות של לולאה דו מימדית הוא לעבור על מערך דו מימדי / לבצע מיון / לבצע חיפוש.
+    חשוב לציין שלולאה דו מימדית סטנדרטית רצה בסדר גודל של n^2 , כלומר היא תבצע n*n פעולות (כאשר n הוא הנתון הראשי).
+    נניח שאנו רוצים להדפיס משולש שעשוי מכוכביות:
+    <br>
+    במקום לרשום:
+
+
+    <!--CODE1   
+    Printf("*");
+    Printf("**");
+    Printf("***");
+    Printf("****");
+    Printf("*****");
+    Printf("******"); 
+    END CODE-->
+
+
+    <br>
+    נוכל לרשום:
+    <br>
+    <!--
+    void main(){
+    int i,j;
+    for(i=1;i<6;i++)
+    {
+       for(j=1;j<=i;j++)
+       {
+          printf("*"); 
+       }
+        printf("\n"); 
+    }
+   
+  } 
+    -->
+
+    הסבר:
+    <br>
+     בדוגמא זו יש לנו לולאה בתוך לולאה,
+    הלולאה הראשונה שלנו היא לולאה שרצה מi עד ל 5. בתוך הלולאה הראשונה שלנו קיימת עוד לולאה שרצה כל פעם מJ עד לi
+    הנוכחי. בתול הלולאה השנייה שלנו אנו מדפיסים כוכבית אחת בכל איטרציה (ריצה). בכל פעם שאנו מסיימים את הלולאה השנייה
+    אנו חוזרים לקוד שרץ בלולאה הראשונה ומבצעים ירידת שורה (כך אנו חוזרים שהמשך הקוד בלולאה הראשונה).
+
   </p>
-
-
 </body>
+
 
 </html>
