--- a/firstProgram.html
+++ b/firstProgram.html
@@ -72,15 +72,15 @@
 
   <p class="top-right">
 
-    בתוכנית זו נלמד איך מדפיסים למסך hello world:
+    בתוכנית זו נלמד איך מדפיסים למסך  <span dir="ltr">hello world:</span>
     <br>
     include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית)
     <br>
     stdio.h = הספרייה הכללית (נמצאת בכל תוכנית שלנו)
     <br>
-    void main() = התוכנית הראשית שלנו – כל הקוד שירוץ בתוכנית שלנו יתחם על ידי סוגריים מסולסלים
+    <span dir="ltr">void main()</span> = התוכנית הראשית שלנו – כל הקוד שירוץ בתוכנית שלנו יתחם על ידי סוגריים מסולסלים
     <br>
-    printf("") = פעולת הדפסה בסיסית – נרשום את מה שאנו רוצים להדפיס בתוך הגרשיים שבתוך הסוגריים.
+    <span dir="ltr">printf("")</span> = פעולת הדפסה בסיסית – נרשום את מה שאנו רוצים להדפיס בתוך הגרשיים שבתוך הסוגריים.
     
 
   </p>
