--- a/mathOperator.html
+++ b/mathOperator.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/code.css">
+  <link rel="stylesheet" href="css/mathOperator-style.css">
 </head>
 
 <body>
@@ -99,11 +100,7 @@
     <br>
     דוגמה להשמה:
     <br>
-    <!--CODE-->
-    int x = 5;
-    x = 7;
-    <!--END CODE-->
-    <br>
+    <br><br><br><br><br>
     בעצם מה שקורה פה זה שאנחנו מצהירים על משתנה בשם x ואנחנו משווים אותו ל5, כלומר עשינו פה השמה.
   
     <br>
@@ -112,7 +109,13 @@
 
 
   </p>
+<figure id="code-1">
 
+    <figcaption id="example1-caption">CODE:</figcaption>
+    <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><b>int</b> x;
+x = 7;
+      </code></pre>
+  </figure>
 
 </body>
 
